// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsMain > renders correctly 1`] = `
<v-row-stub
  class="fill-height bg-quaternary-dark d-flex flex-column align-center"
  data-v-eaf6228b=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-row-stub
    class="settings-cards-wrapper mx-sm-9 my-4"
    data-v-eaf6228b=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Hi, {value}!"
        data-v-eaf6228b=""
        imgid="profile-img-1"
        introtext="Manage your basic information — name, profile picture, email, and language"
        routeto="profile"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Users"
        data-v-eaf6228b=""
        imgid="users"
        introtext="Control who has access to Evocon in your company and what rights they should have"
        routeto="users"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Operators"
        data-v-eaf6228b=""
        imgid="operators"
        introtext="Manage the names of your operators and the stations where they are working"
        routeto="operators"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Stop reasons"
        data-v-eaf6228b=""
        imgid="comments"
        introtext="Manage reasons that operators use to comment production downtime"
        routeto="comments"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Speed loss reasons"
        data-v-eaf6228b=""
        imgid="speedlossreasons"
        introtext="Manage reasons that operators use to comment speed loss"
        routeto="speedlossreasons"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Scrap reasons"
        data-v-eaf6228b=""
        imgid="scrapreasons"
        introtext="Manage reasons that operators use to comment quality loss"
        routeto="scrapreasons"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Stations"
        data-v-eaf6228b=""
        imgid="stations"
        introtext="Adjust station settings, like OEE targets, notification emails & empty shift reason"
        routeto="stations"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Machine locations"
        data-v-eaf6228b=""
        imgid="positions"
        introtext="Link reasons to specific machine locations to track exactly where issues occur"
        routeto="positions"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="products"
        data-v-eaf6228b=""
        imgid="products"
        introtext="View and manage all the products and their settings that are produced in your company"
        routeto="products"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Shifts"
        data-v-eaf6228b=""
        imgid="shifts"
        introtext="Define the work schedule of each station in your factory"
        routeto="shifts"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Alerts"
        data-v-eaf6228b=""
        imgid="alerts"
        introtext="Use alerts to get notified about different production events"
        routeto="alerts"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Checklists"
        data-v-eaf6228b=""
        imgid="checklists"
        introtext="Set up checklists to help operators in performing their daily tasks on time"
        issmallnewindicator="true"
        newindicatorshownuntil="2026-04-30T00:00:00"
        routeto="checklists"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Devices"
        data-v-eaf6228b=""
        imgid="devices"
        introtext="Get an overview of the status of your Evocon devices and inputs"
        routeto="devices"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Tags"
        data-v-eaf6228b=""
        imgid="tags"
        introtext="Use tags to connect stop reasons to your company’s analytics"
        routeto="tags"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="quality"
        data-v-eaf6228b=""
        imgid="quality"
        introtext="Enter and manage the data on quality to get accurate OEE statistics"
        routeto="quality"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="API keys"
        data-v-eaf6228b=""
        imgid="apikeys"
        introtext="Generate unique API keys for services that need to interact with Evocon"
        routeto="apikeys"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Activity logs"
        data-v-eaf6228b=""
        imgid="activitylogs"
        introtext="Get a complete overview of who did what and when in Evocon"
        routeto="activitylogs"
      />
    </v-col-stub>
    
  </v-row-stub>
  <div
    class="d-flex flex-column mx-auto pt-4 pb-10 text-center"
    data-v-eaf6228b=""
  >
    <span
      class="text-body-medium mb-2"
      data-v-eaf6228b=""
    >
      If you have any problems or ideas please contact our customer service
    </span>
    <evocon-v-button-stub
      class="mx-auto"
      color="quaternary-dark"
      data-v-eaf6228b=""
      icon=""
      iconcolor=""
      id="support-chat-button"
      text="Contact support"
      textclass=""
      type="primary"
    />
  </div>
</v-row-stub>
`;

exports[`SettingsMain > renders correctly in mobile view 1`] = `
<v-row-stub
  class="fill-height bg-quaternary-dark d-flex flex-column align-center"
  data-v-eaf6228b=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-row-stub
    class="settings-cards-wrapper mx-sm-9 my-4 full-width"
    data-v-eaf6228b=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Hi, {value}!"
        data-v-eaf6228b=""
        imgid="profile-img-1"
        introtext="Manage your basic information — name, profile picture, email, and language"
        routeto="profile"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Users"
        data-v-eaf6228b=""
        imgid="users"
        introtext="Control who has access to Evocon in your company and what rights they should have"
        routeto="users"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Operators"
        data-v-eaf6228b=""
        imgid="operators"
        introtext="Manage the names of your operators and the stations where they are working"
        routeto="operators"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Stop reasons"
        data-v-eaf6228b=""
        imgid="comments"
        introtext="Manage reasons that operators use to comment production downtime"
        routeto="comments"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Speed loss reasons"
        data-v-eaf6228b=""
        imgid="speedlossreasons"
        introtext="Manage reasons that operators use to comment speed loss"
        routeto="speedlossreasons"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Scrap reasons"
        data-v-eaf6228b=""
        imgid="scrapreasons"
        introtext="Manage reasons that operators use to comment quality loss"
        routeto="scrapreasons"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Stations"
        data-v-eaf6228b=""
        imgid="stations"
        introtext="Adjust station settings, like OEE targets, notification emails & empty shift reason"
        routeto="stations"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Machine locations"
        data-v-eaf6228b=""
        imgid="positions"
        introtext="Link reasons to specific machine locations to track exactly where issues occur"
        routeto="positions"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="products"
        data-v-eaf6228b=""
        imgid="products"
        introtext="View and manage all the products and their settings that are produced in your company"
        routeto="products"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Shifts"
        data-v-eaf6228b=""
        imgid="shifts"
        introtext="Define the work schedule of each station in your factory"
        routeto="shifts"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Alerts"
        data-v-eaf6228b=""
        imgid="alerts"
        introtext="Use alerts to get notified about different production events"
        routeto="alerts"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Checklists"
        data-v-eaf6228b=""
        imgid="checklists"
        introtext="Set up checklists to help operators in performing their daily tasks on time"
        issmallnewindicator="true"
        newindicatorshownuntil="2026-04-30T00:00:00"
        routeto="checklists"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Devices"
        data-v-eaf6228b=""
        imgid="devices"
        introtext="Get an overview of the status of your Evocon devices and inputs"
        routeto="devices"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Tags"
        data-v-eaf6228b=""
        imgid="tags"
        introtext="Use tags to connect stop reasons to your company’s analytics"
        routeto="tags"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="quality"
        data-v-eaf6228b=""
        imgid="quality"
        introtext="Enter and manage the data on quality to get accurate OEE statistics"
        routeto="quality"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="API keys"
        data-v-eaf6228b=""
        imgid="apikeys"
        introtext="Generate unique API keys for services that need to interact with Evocon"
        routeto="apikeys"
      />
    </v-col-stub>
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="4"
      md="false"
      sm="6"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Activity logs"
        data-v-eaf6228b=""
        imgid="activitylogs"
        introtext="Get a complete overview of who did what and when in Evocon"
        routeto="activitylogs"
      />
    </v-col-stub>
    
  </v-row-stub>
  <div
    class="d-flex flex-column mx-auto pt-4 pb-10 text-center"
    data-v-eaf6228b=""
  >
    <span
      class="text-body-medium mb-2"
      data-v-eaf6228b=""
    >
      If you have any problems or ideas please contact our customer service
    </span>
    <evocon-v-button-stub
      class="mx-auto"
      color="quaternary-dark"
      data-v-eaf6228b=""
      icon=""
      iconcolor=""
      id="support-chat-button"
      text="Contact support"
      textclass=""
      type="primary"
    />
  </div>
</v-row-stub>
`;

exports[`SettingsMain > renders correctly when settings are not allowed 1`] = `
<v-row-stub
  class="fill-height bg-quaternary-dark d-flex flex-column align-center"
  data-v-eaf6228b=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <v-row-stub
    class="settings-cards-wrapper mx-sm-9 my-4"
    data-v-eaf6228b=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    
    <v-col-stub
      class="pa-2"
      cols="12"
      data-v-eaf6228b=""
      lg="12"
      md="false"
      sm="12"
      tag="div"
      xl="false"
      xxl="false"
    >
      <settings-intro-card-stub
        cardtitle="Hi, {value}!"
        data-v-eaf6228b=""
        imgid="profile-img-1"
        introtext="Manage your basic information — name, profile picture, email, and language"
        routeto="profile"
      />
    </v-col-stub>
    
  </v-row-stub>
  <!--v-if-->
</v-row-stub>
`;
